--- a/src/assets/scss/theme-dark.scss
+++ b/src/assets/scss/theme-dark.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700%7cPoppins:100,200,300,400,500,600,700,800,900');
+@import url('../fonts/fonts.css');
 @import '../../../node_modules/bootstrap/scss/functions';
 @import 'theme/functions';
 @import 'user-variables';
