--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Poppins:100,200,300,400,500,600,700,800,900&display=swap');
+@import url('../fonts/fonts-swap.css');
 @import '../../../node_modules/bootstrap/scss/functions';
 @import 'theme/functions';
 @import 'user-variables';
